fix: scrollbar causing overflow + link styling

--- a/themes/apollo/sass/main.scss
+++ b/themes/apollo/sass/main.scss
@@ -36,15 +36,16 @@ html {
   color: var(--text-0);
   font-family: var(--text-font);
   line-height: var(--line-height);
+  overflow-y: scroll; // solves the annoying scrollbar issue
 
   @media (max-width: 992px) {
     font-size: calc(var(--font-size-base) * 1.02);
   }
   @media (max-width: 768px) {
-      font-size: calc(var(--font-size-base) * 1.05);
+    font-size: calc(var(--font-size-base) * 1.05);
   }
   @media (max-width: 576px) {
-      font-size: calc(var(--font-size-base) * 1.08);
+    font-size: calc(var(--font-size-base) * 1.08);
   }
 }
 
