--- a/themes/apollo/sass/parts/_misc.scss
+++ b/themes/apollo/sass/parts/_misc.scss
@@ -41,8 +41,8 @@ a {
 
   /* use colored hovering */
   &:hover {
-      background-color: var(--hover-bg-color, var(--primary-color));
-      color: var(--hover-color);
+      background-color: transparent;
+      color: var(--primary-color);
   }
 
   /* hover link with child elements (e.g. code)  */
@@ -65,7 +65,7 @@ a {
 /* Only have colored links inside the text */
 main {
   a {
-      border-bottom: 2px solid var(--primary-color);
+      border-bottom: 1px solid var(--primary-color);
 
       // Make sure the underline is at the top
       position: relative; // needed for z-index
