--- a/themes/apollo/sass/theme/light.scss
+++ b/themes/apollo/sass/theme/light.scss
@@ -19,5 +19,4 @@ $text-2: darken($bg-0, 30%);
 
   --primary-color: #b6b6b6;
   --hover-color: white;
-  --hover-bg-color: color-mix(in srgb, var(--primary-color) 60%, transparent);
 }
